--- a/aa.html
+++ b/aa.html
@@ -63,14 +63,18 @@
             <img class="block relative mt-6 ml-[101px] z-[24]" src="images/iss_baar_international.png" alt="Iss Baar International" width="700" height="57" title="Iss Baar International">
             <img class="block relative mt-5.5 ml-[100px] z-[25]" src="images/vyapaar.png" alt="Vyapaar" width="252" height="56" title="Vyapaar">
             <img class="block relative mt-7 ml-[89px] z-[27]" src="images/with_dr_manav_ahuja.png" alt="" width="529" height="80">
+
+            <button class="rounded-full ...">Save Changes</button>
           </div>
         </div>
 
+       <div class="bg-[#0000006b]"> 
         <div class="mx-auto max-h-[766px] relative -mt-[168px] py-[380px] px-0 border-[10px] border-white bg-no-repeat  " style="background-image: url('images/rectangle_3.jpg'); width: 1128px; max-height: 766px; height: 100%; box-sizing: border-box; border-style: solid;">
           <p class="text-[3.038194rem] font-medium text-center pt-[130px]">अगर आपके Product में है दम, तो आपको</p>
           <img class="block mx-auto mt-3" src="images/international_brand.png" alt="International Brand" width="638" height="53" title="International Brand">
           <p class="mt-6 text-[3.038194rem] font-medium text-center">बना कर रहेंगे हम</p>
         </div>
+      </div>
         
       </header>
       
